src/App.css
/* Custom Fonts */
@font-face {
  font-family: Centra;
  src: url('./assets/font/CentraNo2-Bold.ttf');
  font-weight: 700;
}

@font-face {
  font-family: Centra;
  src: url('./assets/font/CentraNo2-Medium.ttf');
  font-weight: 500;
}

@font-face {
  font-family: Centra;
  src: url('./assets/font/CentraNo2-Book.ttf');
  font-weight: 400;
}

/* Default CSS */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 75px;
}

body {
  font-weight: 400;
  overflow-x: hidden;
  position: relative;
  background-color: #ffffff
    /*#121212*/
    !important;
  /* adding important because sometimes bootstrap styling overrides our styling, so some cases you have to set important. Same thing for the color */
  color:
    /*#fff*/
    #333333 !important;
  font-family: 'Centra', sans-serif !important;
  overflow-x: hidden;

}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
  line-height: normal;
}

p,
a,
li,
button,
ul {
  margin: 0;
  padding: 0;
  line-height: normal;
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

img {
  width: 100%;
  height: auto;
}

button {
  border: 0;
  background-color: transparent;
}

input:focus,
textarea:focus,
select:focus {
  outline: none;
}

@media (min-width:1700px) {
  main .container {
    max-width: 100%;
    padding: 0 150px;
  }
}

p.success {
  color: green;
}

p.danger {
  color: red;
}

.content {
  flex: 1;
  margin-top: 50px;
  padding: 130px 0px;
  background-color: #ffffff;
  padding-left: 0px;
  padding-right: 0px;
}

/************************************ Navbar Css ************************************/
/************************************ Navbar Css ************************************/
/* Styling for the navbar */
nav.navbar {
  padding: 18px 0;
  /* Padding on the top and bottom */
  position: fixed;
  /* Fixes the navbar to the top of the screen */
  width: 100%;
  /* Full width */
  top: 0;
  /* Positioned at the very top */
  z-index: 9999;
  /* Ensures the navbar is on top of other elements */
  transition: 0.32s ease-in-out;
  /* Smooth transition for padding changes */
}

/* Styling for the navbar when scrolled */
nav.navbar.scrolled {
  padding: 0px 0;
  /* Removes padding on scroll */
  background-color: #9514ff;
  /* Changes background color when scrolled */
}

/* Styling for the navbar brand link (logo) */
nav.navbar a.navbar-brand {
  width: 9%;
  /* Width of the logo */
  padding-left: 50px;

  padding-right: 300px;
  /* Right padding to space out from the links */
}

/* Styling for navbar links */
.navbar-link {
  color: #000;
  /* Default link color */
  padding: 0 15px;
  /* Padding around the links */
  text-decoration: none;
  /* Remove underline */
  display: flex;
  /* Ensures it takes up the remaining space */
  align-items: center;
  /* Center align items vertically */
}

/* Styling for active navbar link */
.navbar-link.active {
  font-weight: bold;
  background-color: rgb(255, 56, 103) !important;
  color: white !important;
  border-radius: 4px;
}

/* Styling for buttons within navbar text */
.navbar-text button {
  white-space: nowrap;
  /* Ensures text doesn't wrap */
  font-weight: 700;
  /* Bold text */
  color: #000000;
  /* Black text color */
  padding: 18px 34px;
  /* Padding around the button text */
  font-size: 18px;
  /* Font size of the button text */
  margin-left: 18px;
  /* Margin to the left */
  position: relative;
  /* Allows positioning of pseudo-elements */
  background-color: transparent;
  /* Transparent background */
  transition: 0.3s ease-in-out;
  /* Smooth transition for hover effect */
}

/* Styling for button text */
.navbar-text button span {
  z-index: 1;
  /* Ensures text is above the background */
}

.navbar-text button::before {
  content: "";
  /* Empty content for the pseudo-element */
  width: 0%;
  /* Initially zero width for hover effect */
  height: 100%;
  /* Full height */
  position: absolute;
  /* Positioned relative to the button */
  background-color: #f6b800;
  /* Background color of the hover effect */
  left: 0;
  /* Start from the left */
  top: 0;
  /* Start from the top */
  z-index: -1;
  /* Behind the text */
  transition: 0.3s ease-in-out;
  /* Smooth transition for hover effect */
}

/* Styling for button hover effect */
.navbar-text button:hover {
  color: #FFDF13;
  /* Changes text color on hover */
}

/* Styling for navbar toggler icon */
nav.navbar .navbar-toggler-icon {
  width: 24px;
  /* Width of the icon */
  height: 17px;
  /* Height of the icon */
  background-image: none;
  /* Removes default background image */
  position: relative;
  /* Allows positioning of pseudo-elements */
  border-bottom: 2px solid #10ca06;
  /* Bottom border */
  transition: all 300ms linear;
  /* Smooth transition for all properties */
  top: -2px;
  /* Adjusts position */
}

/* Styling for navbar toggler icon focus state */
nav.navbar .navbar-toggler-icon:focus {
  border-bottom: 2px solid #0fac5b;
  /* Changes bottom border color on focus */
}

/* Styling for navbar toggler icon lines */
nav.navbar .navbar-toggler-icon:after,
nav.navbar .navbar-toggler-icon:before {
  width: 24px;
  /* Width of the lines */
  position: absolute;
  /* Positioned relative to the icon */
  height: 2px;
  /* Height of the lines */
  background-color: #370b65;
  /* Background color of the lines */
  top: 0;
  /* Positioned at the top */
  left: 0;
  /* Positioned at the left */
  content: '';
  /* Empty content for the pseudo-element */
  z-index: 2;
  /* Above other elements */
  transition: all 300ms linear;
  /* Smooth transition for all properties */
}

nav.navbar .navbar-toggler-icon:after {
  top: 8px;
  /* Positioned below the first line */
}

/* Styling for expanded navbar toggler icon lines */
nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
  transform: rotate(45deg);
  /* Rotates line on expand */
  background-color: #ff3807;
  /* Changes background color */
  height: 2px;
  /* Height of the line */
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
  transform: translateY(8px) rotate(-45deg);
  /* Moves and rotates line on expand */
  background-color: #bf1515;
  /* Changes background color */
  height: 2px;
  /* Height of the line */
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
  border-color: transparent;
  /* Removes border on expand */
}

/* Styling for the navigation menu */
nav.navbar .menuText {
  color: #bf7015;
  /* Text color */
  display: flex;
  /* Flexbox for menu items */
  justify-content: space-between;
  /* Evenly spaces out menu items */
  align-items: center;
  /* Center aligns items vertically */
  width: 100%;
  /* Ensures it takes up the remaining space */
  padding-left: 30px;
  /* Padding to the left to create space from the logo */
}


/*********************************************** Banner ***********************************************/
.above-line {
  padding-left: 30px;
  text-align: left;
  margin-top: 0px;
}

.banner .space {
  padding-bottom: 60px;
}

.banner {
  margin-top: 0;
  padding: 130px 0px;
  background-color: #ffffff;
  padding-left: 0px;
  padding-right: 50px;
}

.banner p {
  color: #333333;
  font-size: 16px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  text-align: left;

  margin-right: 20px;
  margin-left: 20px;
}

.banner h1 {
  font-size: 36px;
  font-weight: 700;
  letter-spacing: 0.05px;
  line-height: 1.2;
  margin-bottom: 20px;
  text-align: left;
  white-space: nowrap;
  margin-right: 20px;
  margin-left: 20px;
  overflow: hidden;
}

.banner .name {
  color: rgb(255, 56, 103);
}

.banner .row {
  align-items: center;
  margin-right: 200px;
  margin-left: 0px;
}

.banner .col-md-6 {
  display: flex;
  justify-content: center;
}

.banner .col-md-6:last-child {
  margin-top: 20px;
  margin-right: 0px;
  margin-left: 0px;
}

.banner .circular-image-container {
  width: 50%;
  max-width: 300px;
  height: auto;
  overflow: hidden;
  border-radius: 50%;
  margin-right: 100px;
  margin-left: 0px;
  padding-right: 0;
  border: 5px solid rgb(255, 56, 103);
}

/* Typing Text */
.txt-rotate>.wrap {
  border-right: 0.08em solid #666;
  text-align: left;
  color: rgb(255, 56, 103);

}

/*********************************************** Footer ***********************************************/
.footer {
  position: fixed;

  text-align: center;
  /* Ensure the footer is above other content */
  bottom: 3px;

  width: 100%;
  bottom: 0;
  z-index: 9999;


}

.footer .row {
  display: flex;
  justify-content: center;
  margin-left: 200px;
  margin-right: 400px;


  /* Adjusted margin-right to accommodate padding and negative margin */
}



.footer .git-social-button img {
  max-width: 40px;
  height: auto;
  background-color: rgb(255, 56, 103);
  border-radius: 50%;

  margin-left: 135px;
  margin-right: 35px;
}

.footer .lIn-social-button img {
  max-width: 40px;
  height: auto;
  background-color: rgb(255, 56, 103);
  border-radius: 50%;

  margin-left: 55px;
  margin-right: 275px;
}



.footer .email {
  background-color: rgb(255, 56, 103);
  padding: 8px 18px;
  display: inline-block;
  border-radius: 24px;
  color: white;
  margin-left: -40px;
  margin-right: -50px;

}

.footer .phone {
  background-color: rgb(255, 56, 103);
  padding: 8px 18px;
  display: inline-block;
  border-radius: 24px;
  color: white;
  margin-left: 15px;
  margin-right: -75px;

}

.footer-divider {
  border-top: 1px solid #ccc;
  margin-top: 0px;
  margin-bottom: 10px;
  margin-left: 50px;
  margin-right: 50px;
}

/*********************************************** Skills ***********************************************/
.skill {
  padding: 0 0 50px 0;
  position: relative;

}

.skill-bx {
  background: #151515;
  border-radius: 64px;
  text-align: center;
  padding: 60px 50px;
  margin-top: -60px;
}

.skill h5 {
  font-size: 45px;
  font-weight: 700;
}

.skill p {
  color: #B8B8B8;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px 0 75px 0;
}

.skill-slider {
  width: 80%;
  margin: 0 auto;
  position: relative;
}

.skill-slider .item img {
  width: 50%;
  margin: 0 auto 15px auto;
}

.background-image-left {
  top: 28%;
  position: absolute;
  bottom: 0;
  width: 40%;
  z-index: -4;
}


.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

/* MY COMMUNITIES*/
.myCommunities h2,
.myCommunities h3 {
  text-align: left;
  padding-left: 50px;
  padding-right: 50px;
}

.myCommunities h2 {
  color: rgb(255, 56, 103);
}

.myCommunities p {
  vertical-align: text-top;
  padding-bottom: 65px;
}

.myCommunities .row {
  display: flex;
  align-items: center;
  padding-left: 50px;
  padding-right: 50px;
  /* Center align vertically */
}

.myCommunities .column {
  flex: 1;
  padding: 10px;
}

.myCommunities .left {
  text-align: left;
}

.myCommunities .right {
  display: flex;
  align-items: center;
  justify-content: center;
}

.myCommunities .video-container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.myCommunities .prev,
.myCommunities .next {
  background: none;
  border: none;
  font-size: 2rem;
  cursor: pointer;
}

@media (max-width: 600px) {
  .myCommunities .row {
    flex-direction: column;
  }

  .myCommunities .right {
    text-align: center;
  }
}

.myCommunities .puerto-rico-images {
  align-items: center;

}

